# Longwave

./: .gitignore  LICENSE  README.md
.github/workflows/: linux-client.yml
client/: index.html  package-lock.json  package.json
client/public/: manifest.webmanifest
client/src/: App.css  App.tsx  index.css  types.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: lib.rs  main.rs
client/src/components/: ContactMap.tsx  CurrentLogView.tsx  LogsView.tsx  SettingsView.tsx
client/src/data/: mockData.ts
client/src/services/: api.ts  desktop.ts  desktopApi.ts  desktopStore.ts  flrig.ts
docs/: architecture.md  integrations.md
server/: .env.example  Dockerfile  README.md  alembic.ini  build-windows-host.ps1  docker-entrypoint.sh  requirements.txt  start-longwave.ps1  start-longwave.sh  windows_host.py  windows_host.spec
server/alembic/: README  env.py
server/alembic/versions/: 20260414_0001_initial_schema.py  20260415_0002_add_adif_metadata.py  20260415_0003_add_station_county_and_dxcc.py  20260415_0004_add_split_api_tokens.py
server/app/: config.py  db.py  db_models.py  dependencies.py  main.py  models.py  repositories.py  schemas.py
server/app/api/: routes.py
server/app/services/: adif.py  pota.py  qrz.py
server/deploy/: longwave.service
