[package]
name = "longwave"
version = "0.1.0"
description = "Longwave desktop client"
authors = ["Longwave"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "longwave_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
roxmltree = "0.21"
native-tls = "0.2"
sha2 = "0.10"
hex = "0.4"
url = "2.5"
